# nova-unikernel

./: openstack-common.conf  requirements.txt  setup.cfg
etc/nova/rootwrap.d/: unikernel.filters
novaunikernel/virt/unikernel/: __init__.py  driver.py
