[metadata]
name = nova-unikernel
summary = Unikernel driver for OpenStack Nova.
description-file =
    README.rst
author = Bruno Xavier
author-email = bgxavier@gmail.com
home-page = http://www.whirred.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    novaunikernel



